--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,34 +1,4 @@
-$primary-color: #444;
-$secondary-color: #eece1a;
-$show-home-image: true;
-$home-image: url(../dist/img/background.jpg);
-$background-opacity: 0.9;
-
-@mixin easeOut {
-  transition: all 0.5s ease-out;
-}
-
-
-@mixin background {
-  @if $show-home-image {
-    &#bg-img { 
-      background: $home-image;
-      background-attachment: fixed;
-      background-size: cover;
-      
-
-      // &:after{ 
-      //   content: '';
-      //   position: absolute;
-      //   top: 0; 
-      //   right: 0; 
-      //   width: 100%;
-      //   height: 100%;
-      //   background: rgba($primary-color, $background-opacity);
-      // }
-    }
-  }
-}
+@import 'config';
 
 
 * { 
@@ -46,7 +16,9 @@ body {
 }
 
 // Headings
-h1, h2, h3 { 
+h1, 
+h2,
+h3 { 
   margin: 0;
   font-weight: 400; 
 
