--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -34,3 +34,60 @@
     }
   }
 }
+
+// Menu Overlay
+.menu { 
+  position: fixed;
+  top: 0;
+  width: 100%;
+  opacity: 0.9;
+  visibility: hidden;
+
+  &.show { 
+    visibility: visible;
+  }
+
+  &-branding, 
+  &-nav{ 
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    float: left;
+    width: 50%;
+    height: 100vh;
+    overflow: hidden;
+  }
+
+  &-nav { 
+    margin: 0; 
+    padding: 0;
+    background: darken($primary-color, 5);
+    list-style: none;
+    transform: translate3d(0, -100%, 0);
+    @include easeOut;
+    &.show { 
+      // slide in from the top
+      transform: translate3d(0, 0, 0);
+    }
+  }
+// Branding Slide
+  &-branding { 
+    background: $primary-color;
+    @include easeOut;
+    transform: translate3d(0, 100%, 0);
+      // Slide in from bottom
+    &.show { 
+      transform: translate3d(0, 0, 0);
+    }
+
+    .portrait { 
+      width: 250px; 
+      height: 250px; 
+      background: $portrait-image;
+      border-radius: 50%;
+      border: solid 3px $secondary-color;
+    }
+  }
+
+}
