feat: add  menu overlay

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -3,6 +3,7 @@ $secondary-color: #eece1a;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
 $portrait-image: url(../img/portrait.jpg);
+$white-color: #fff;
 $background-opacity: 0.9;
 
 @mixin easeOut {
