--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -11,7 +11,7 @@
     width: 28px;
     height: 3px;
     margin: 0 0 5px 0; 
-    background: #fff;
+    background: $white-color;
     @include easeOut;
   }
   // Rotate into X with Menu Lines
@@ -90,4 +90,40 @@
     }
   }
 
+  .nav-item { 
+    transform: translate3d(600px, 0, 0);
+    @include easeOut;
+
+    &.show  { 
+      // Slide in from right
+      transform: translate3d(0, 0, 0);
+    }
+
+    &.current > a { 
+      color: $secondary-color;
+    }
+  }
+
+  .nav-link {
+    display: inline-block;
+    position: relative;
+    font-size: 30px;
+    text-transform: uppercase;
+    padding: 1rem 0; 
+    font-weight:$white-color;
+    text-decoration: none;
+    @include easeOut;
+
+    &:hover { 
+      color: $secondary-color;
+    }
+  }
+}
+
+
+// Delay each nav item slide by 0.1s 
+@for $x from 1 through 4 { 
+  .nav-item:nth-child(#{$x}) { 
+    transition-delay: $x * 0.1s;
+  };
 }
