--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,7 +12,7 @@ body {
   margin: 0; 
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.5;
-  color: #fff;
+  color:$white-color;
 }
 
 // Headings
@@ -34,7 +34,7 @@ h3 {
 }
 
 a {
-  color:#fff;
+  color:$white-color;
   text-decoration: none;
 }
 
