--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -19,7 +19,7 @@
     }
   }
 
-  ul.menu-navm, 
+  ul.menu-nav, 
   div.menu-branding { 
     float: none;
     width: 100%;
@@ -32,7 +32,7 @@
 
   .menu-nav { 
     height: 75vh;
-    transform: translate3d(-100, 0, 0);
+    transform: translate3d(-100%, 0, 0);
     font-size: 24px; 
   }
 
