--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -34,19 +34,19 @@ $background-opacity: 0.9;
 }
 // Media Query Mixins
 @mixin mediaMd { 
-  @media Screen and (max-width:768px) {
+  @media screen and (max-width:768px) {
     @content;
   }
 }
 
 @mixin mediaLg { 
-  @media Screen and (min-width: 769px) and (max-width: 1170px) {
+  @media screen and (min-width: 769px) and (max-width: 1170px) {
     @content;
   }
 }
 
 @mixin mediaSm { 
-  @media Screen and (max-width: 500px) {
+  @media screen and (max-width: 500px) {
     @content;
   }
 }
