--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -36,7 +36,7 @@
     font-size: 24px; 
   }
 
-  .menu-brnading { 
+  .menu-branding { 
     height: 25vh; 
     transform: translate3d(100%, 0, 0);
     
@@ -48,7 +48,7 @@
   }
 }
 
-// SmartPhones
+// SmartPhones 
 @include mediaSm { 
   main { 
     main#home h1 { 
