--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -51,8 +51,15 @@
 // SmartPhones 
 @include mediaSm { 
   main { 
-    main#home h1 { 
+    padding: 2rem;
+
+    #home h1 { 
       margin-top: 10vh;
+    }
+
+    .lg-heading{
+      margin-top:1rem;
+      font-size: 5rem;
     }
   }
 }
