--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -32,6 +32,16 @@ $background-opacity: 0.9;
     }
   }
 }
+
+// Set Text Color
+@function set-text-color($color) {
+  @if(lightness($color) > 40) {
+    @return #000;
+  }
+  @else {
+    @return #fff;
+  }
+}
 // Media Query Mixins
 @mixin mediaMd { 
   @media screen and (max-width:768px) {
