--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,7 +13,7 @@ body {
   margin: 0; 
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.5;
-  color:$white-color;
+  color: set-text-color($primary-color);
 }
 
 // Headings
