--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -11,7 +11,7 @@
     width: 28px;
     height: 3px;
     margin: 0 0 5px 0; 
-    background: $white-color;
+    background: set-text-color($primary-color);
     @include easeOut;
   }
   // Rotate into X with Menu Lines
@@ -110,7 +110,7 @@
     font-size: 30px;
     text-transform: uppercase;
     padding: 1rem 0; 
-    font-weight:$white-color;
+    font-weight:set-text-color($primary-color);
     text-decoration: none;
     @include easeOut;
 
