--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,10 +1,14 @@
 // Widescreens
 @include mediaXl { 
-
+  .projects { 
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 //Desktop & Laptops
 @include mediaLg { 
-
+  .projects { 
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 //Tablets & Small Laptops
@@ -57,6 +61,10 @@
 
     grid-template-columns: 1fr;
   }
+
+  .projects { 
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 // SmartPhones 
@@ -72,6 +80,10 @@
       margin-top:1rem;
       font-size: 5rem;
     }
+  }
+
+  .projects { 
+    grid-template-columns: 1fr;
   }
 }
 
