--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,7 @@
       height: 250px;
       background: url(../img/portrait.jpg);
       border-radius: 50%;
+      background-repeat: no-repeat;
       border: solid 3px #eece1a; }
   .menu .nav-item {
     transform: translate3d(600px, 0, 0);
